    In compat 12, this is an error.  Thanks to Andreas Beckmann for
    the suggestions.  (Closes: #882626)
  * dh_strip: Fix bug where the Build-Id field would not be properly
    filled when using --dbg-package.  Thanks to Paul Wise for finding
    and reporting the bug.  (Closes: #884152)
  * d/control: Bump Standards-Version to 4.1.2 - no changes required.

  [ Chris Leick ]
  * debhelper.pod: Improve the wording of two parapraphs.

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #883635)
  * Update German translation (Chris Leick)  (Closes: #884205)

 -- Niels Thykier <niels@thykier.net>  Sat, 25 Nov 2017 11:59:53 +0000

debhelper (10.10.9) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * qmake.pm: Add missing import of generated_file.
  * meson.pm: Find typo of meson in the name of the cross config
    file.
  * qmake.pm: Push compiler information as ‘early’ flags to qmake, to
    make sure qmake calls the right compiler to get library paths.
  * qmake.pm: Add all possible settings to generated qmake-cross.conf.
    Now output of ‘qmake -query’ with and without using this file is
    identical. This makes cross-building Qt’s own modules possible.

  [ Niels Thykier ]
  * dh_missing: Permit a missing debian/tmp without failing in
    compat 11 when debian/tmp is an implicit source directory.
    Thanks to Christoph Biedl for reporting the bug.
    (Closes: #882083)
  * dh_missing: Improve the wording about "debian/not-installed".

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Nov 2017 11:04:45 +0000

debhelper (10.10.8) unstable; urgency=medium

  [ Niels Thykier ]
  * Document that compat 11 is now in its open beta phase.
  * Dh_Getopt: Improve warning message when a package is excluded
    due to profiles or architecture restrictions.
  * dh_install: Properly allow patterns to be excluded without
    complaining about missing files.  (Closes: #881658)
  * qmake.pm: Ensure that the qmake cross-build config file