@@ -139,8 +139,6 @@ scripts.
 
 =cut
 
-exit 0 if compat(10);
-
 $dh{RESTART_AFTER_UPGRADE} = 1;
 
 init(options => {
