@@ -9,6 +9,8 @@ debhelper (10.10.10) UNRELEASED; urgency=medium
     filled when using --dbg-package.  Thanks to Paul Wise for finding
     and reporting the bug.  (Closes: #884152)
   * d/control: Bump Standards-Version to 4.1.2 - no changes required.
+  * dh_installsystemd: Remove neutering of dh_installsystemd in compat
+    levels prior to 11 now that compat 11 is stable.
 
   [ Chris Leick ]
   * debhelper.pod: Improve the wording of two parapraphs.
